--- a/AdventOfCode2024/AdventOfCode2024.csproj
+++ b/AdventOfCode2024/AdventOfCode2024.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="wwwroot\style.css" />
+    <None Include="wwwroot\styles.css" />
   </ItemGroup>
 
 </Project>
