--- a/AdventOfCode2024/Properties/launchSettings.json
+++ b/AdventOfCode2024/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "",
+      "launchUrl": "year?year=2024",
       "applicationUrl": "http://localhost:6578",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
