--- a/AdventOfCodeApp/AdventOfCodeWeb.csproj
+++ b/AdventOfCodeApp/AdventOfCodeWeb.csproj
@@ -11,4 +11,8 @@
     <None Include="wwwroot\styles.css" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Solutions\Solutions.csproj" />
+  </ItemGroup>
+
 </Project>
